--- a/src/scss/_partials/_chip.scss
+++ b/src/scss/_partials/_chip.scss
@@ -1,33 +1,22 @@
 .chip {
-  font-weight: 400;
   background: $deep-purple;
-  display: inline-block;
-  height: 32px;
+  color: $white;
+  font-weight: 400;
   line-height: 32px;
-  border-radius: 16px;
-  -moz-border-radius: 16px;
-  -webkit-border-radius: 16px;
+  height: 32px;
+
+  border-radius: $chip-border-radius;
+  border: solid $chip-border-width $deep-purple-translucent;
   padding: 0 12px;
-  box-sizing: border-box;
-  vertical-align: middle;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: -webkit-inline-flex;
   display: inline-flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
   align-items: center;
+  justify-content: center;
   margin: 2px 0;
 
   .chip-label {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    position: relative;
-    -webkit-box-flex: 1;
-    -webkit-flex-shrink: 1;
-    -ms-flex: 0 1 auto;
     flex-shrink: 1;
     min-width: 0;
   }
@@ -35,6 +24,7 @@
 
 .chip.disabled-chip {
   background: none;
+  color: inherit;
 }
 
 .chip-1 {
