QS-1651: LeftPanel: Cambiarlo a un drawer que cubre la aplicación; otros
 - Eliminar efecto 3D
 - Habilitar swipe
 - Añadir sombra al panel
 - Reducir padding horizontal

--- a/src/scss/_partials/_panel.scss
+++ b/src/scss/_partials/_panel.scss
@@ -4,9 +4,9 @@ body.panels-3d.with-panel-left-reveal .views {
 }
 
 .panel {
-	background: $white;
+	background: $panel-bg;
+	box-shadow: 0px 2px 8px rgba(0,0,0,.25);
 	// color: #fff;
-	width: 100%;
 
 	.content-block {
 		// color: #fff;
@@ -41,7 +41,7 @@ body.panels-3d.with-panel-left-reveal .views {
 		a {
 			display: block;
 			font-size: 1.142857143em;
-			padding: 20px;
+			padding: 16px 20px;
 
 			.unread-messages-count {
 				background: $green-alert;
