--- a/src/scss/_partials/_variables.scss
+++ b/src/scss/_partials/_variables.scss
@@ -1,5 +1,6 @@
 $bottombar-hg: 56px;
 $navbar-hg: 52px;
+$panel-width: 324px;
 $card-border-radius: 8px;
 $chip-border-radius: 16px;
 $chip-border-width: 1px;
