--- a/src/scss/_partials/_popup.scss
+++ b/src/scss/_partials/_popup.scss
@@ -3,7 +3,7 @@
 }
 
 .popup {
-	background: $dark-purple-semi-translucent;
+	background: $overlay-bg;
 	margin-top: 50px;
 	overflow: hidden;
 	position: fixed;
