--- a/src/scss/pages/discover.scss
+++ b/src/scss/pages/discover.scss
@@ -34,6 +34,26 @@ body #root .App .views .view .page.discover-page {
       }
     }
 
+    .order-selector {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 16px;
+      padding: 8px 0 8px;
+      .order-selector-status {
+      }
+      .icon {
+        color: $deep-purple;
+      }
+      .text-radios {
+        padding: 0 0 16px;
+        min-width: 16.5em;
+        .text-radios-title {
+          display: none;
+        }
+      }
+    }
+
     .no-recommendations {
       padding: 16px;
       text-align: center;
