--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -170,47 +170,36 @@ body #root .App .views .view .page.other-user-page {
     }
 
     .other-profile-wrapper {
-      width: 200%;
-      background-color: $deep-purple-translucent;
-      margin-left: -50%;
       margin-top: 20px;
       text-align: center;
     }
 
     .other-profile-data {
-      color: white;
-      margin: 10px auto;
-      display: inline-block;
-      width: 50%;
-      .other-profile-left {
-        width: 50%;
-        height: 100%;
-        float: left;
-
-        .other-profile-stats {
-          width: 100%;
-
-          a {
-            color: #fff;
-          }
-        }
-      }
       .other-profile-right {
-        width: 50%;
-        height: 100%;
-        float: right;
-
+        margin: 8px 24px;
+        .entry {
+          display: flex;
+          align-items: center;
+          margin: 4px 0;
+          font-size: 16px;
+        }
+        .label {
+          text-align: left;
+          min-width: 7.5em;
+        }
+        .percentage {
+          text-align: right;
+          min-width: 3.5em;
+        }
         .progress-bar {
-          margin-top: 5px;
-          margin-bottom: 5px;
-          border-radius: 5px;
-          -moz-border-radius: 5px;
-          -webkit-border-radius: 5px;
+          flex: 1;
+          margin: 0px 8px;
+		      background-color: #E6E9EC;
         }
         [class^="progress-bar"], [class*=" progress-bar-"] {
-          border-radius: 5px;
-          -moz-border-radius: 5px;
-          -webkit-border-radius: 5px;
+		      height: 5px;
+		      min-width: 5px;
+          border-radius: 2.5px;
         }
 
         .calculating-matching {
@@ -226,12 +215,8 @@ body #root .App .views .view .page.other-user-page {
       }
 
       .common-groups {
-        clear: both;
         text-align: left;
-        margin-left: 10%;
         position: relative;
-        top: 10px;
-        margin-bottom: 10px;
 
         .common-groups-title {
           display: inline-block;
