--- a/src/scss/_partials/_empty-message.scss
+++ b/src/scss/_partials/_empty-message.scss
@@ -3,7 +3,7 @@
 	text-align: center;
 
 	.empty-message-text {
-		font-size: 1.8em;
+		font-size: 20px;
 	}
 	.empty-message-gif {
 		margin-top: 30px;
