--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -174,7 +174,7 @@ body {
 					overflow-y: scroll;
 					-webkit-overflow-scrolling: touch;
 					.title {
-						font-size: 1.785714286em;
+						font-size: 20px;
 						text-align: center;
 					}
 
