--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -276,23 +276,73 @@
 	}
 
 	&.content-card {
-		.card-drop-down-menu {
-			color: $material-grey;
-			cursor: pointer;
-			position: absolute;
-			right: 5px;
-			top: 5px;
-			width: 20px;
-			z-index: 111111;
+		.card-content, .card-content-overlay, .card-content-embed {
+			border-radius: $card-border-radius $card-border-radius 0 0;
+		}
+		.card-content {
+			position: relative;
+			padding-bottom: 100%;
+			overflow: hidden;
+			background-size: cover;
+			background-position: 50% 50%;
+			background-color: $white;
+			
+			.card-content-embed, .card-content-overlay {
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				width: 100%;
+				height: 100%;
+			}
+			
+			.card-content-overlay {
+				.card-drop-down-menu {
+					color: $white;
+					margin: auto;
+					position: absolute;
+					right: 0px;
+					top: 0px;
+					font-size: 20px;
+					margin: 5px;
+				}
+			}
+		}
+		.card-footer {
+			padding: 8px 16px 16px;
+			text-align: left;
+			.content-indicators {
+				margin: 0 -8px 4px;
+				display: flex;
+				.content-network, .content-type {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				.content-network, .content-network .label { flex: 1; }
+				.content-network .icon {
+					color: $deep-purple;
+					margin-right: 8px;
+					font-size: 20px;
+				}
+				.content-type span {
+					color: $text_second;
+					margin-left: 8px;
+					font-size: 20px;
+				}
+			}
+		}
+		.card-title, .card-sub-title {
+			word-break: break-word;
+			font-size: 14px;
+			font-weight: 400;
+			margin: 0;
 		}
 		.card-title {
-			padding-left: 25px;
-			padding-right: 25px;
-			word-wrap: break-word;
-
-			a {
-				color: #000;
-			}
+			font-size: 20px;
+			margin-bottom: 4px;
+		}
+		.card-sub-title {
+			color: $text_second;
 		}
 
 	}
