--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -137,7 +137,7 @@ body #root .App .views .view .page.user-page  {
     }
 
     .profile-field-opposite-background {
-      background: $dark-purple;
+      background: $page-bg;
       height: 30%;
       left: 0;
       margin-top: 15px;
