--- a/src/scss/_partials/_filter-content-buttons.scss
+++ b/src/scss/_partials/_filter-content-buttons.scss
@@ -1,5 +1,6 @@
 .filter-content-buttons {
 	.content-block {
+		margin: 10px 0;
 		padding: 0;
 		a {
 			color: #fff;
@@ -7,80 +8,47 @@
 		}
 
 		.filter-icons-row-wrapper {
-			margin-top: 20px;
-			text-align: center;
+			display: flex;
+			justify-content: space-around;
+			margin: 8px 16px;
 
 			.icons-large-wrapper {
-				background-color: $deep-purple;
-				border-radius: 50%;
-				-moz-border-radius: 50%;
-				-webkit-border-radius: 50%;
-				cursor: pointer;
-				display: inline-block;
-				height: 40px;
-				margin: 5px 2%;
+				display: flex;
+				flex-direction: column;
+				flex-basis: 0;
 				text-align: center;
-				width: 40px;
-
-				&.facebook-button-wrapper {
-					background: $facebook-blue;
-				}
-				&.twitter-button-wrapper {
-					background: $twitter-blue;
-				}
-				&.youtube-button-wrapper {
-					background: $youtube-red;
-				}
-				&.spotify-button-wrapper {
-					background: $spotify-green;
-				}
-				&.tumblr-button-wrapper {
-					background: $tumblr-blue;
-				}
-				&.steam-button-wrapper {
-					background: $steam-black;
-				}
-				&.instagram-button-wrapper {
-					background: $instagram-blue;
-				}
-				.icon {
-					font-size: 1.9em;
-					padding-top: 5.5px;
-					&::before {
-						font-size: 0.9em;
-					}
-					&.icon-facebook, &.icon-twitter, &.icon-youtube, &.icon-spotify, &.icon-tumblr, &.icon-steam, &.icon-instagram {
-						font-size: 3em;
-						line-height: 26px;
-					}
-				}
-
+				cursor: pointer;
 
 				.icons-large-text {
-					font-size: 0.8em;
+					font-size: 14px;
 					font-weight: bold;
-					margin-top: 10px;
+					margin-top: 4px;
 
 					&.spinner-text {
 						margin-top: 4px;
 					}
 				}
 
+				.icon-box {
+					width: 40px;
+					height: 40px;
+					background-color: $deep-purple;
+					color: $white;
+					border-radius: 50%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					font-size: 21px;
+				}
+
 				&.active {
-					background-color: transparent;
-					border: 1px solid #fff;
-					height: 38px;
-					width: 38px;
-
-					.icon {
-						padding-top: 4.5px;
-
-						&.icon-spinner {
-							height: 30px;
-							width: 30px;
-							font-size: 1.7em;
-							margin-top: 1px;
-						}
+				}				
+				&.grayed {
+					.icon-box {
+						background: $text_second;
+					}
+					.icons-large-text {
+						color: $text_second;
 					}
 				}
 			}
