QS-1652: Reservar espacio para NavBar en páginas

--- a/src/scss/pages/proposals/edit/basic-page.scss
+++ b/src/scss/pages/proposals/edit/basic-page.scss
@@ -7,6 +7,9 @@ body #root .App .views .view.proposal-basic-edit {
   z-index: 0;
 
   .proposal-wrapper {
+    margin-top: 55px;
+    padding-top: 1px;
+
     h2 {
       padding: 0 24px;
     }
