QS-1651: ToolBar: Añadir toolbar principal con botón-herradura
- Se añade a ToolBar la posibilidad de desplegar la herradura
- Se añaden los strings
- Se crea un componente auxiliar ToolBarMaster
- Se carga en las páginas principales

--- a/src/scss/_partials/_toolbar.scss
+++ b/src/scss/_partials/_toolbar.scss
@@ -41,6 +41,7 @@
         font-size: 24px;
         margin: -3px 0 -6px;
         &.mdi-account { top: 1px; font-size: 25px; margin: -5px 0 -6px; }
+        &.mdi-comment-question-online { top: 1px; }
         &.mdi-thumbs-up-down { font-size: 22px; margin: -1px 0 -4px; }
       }
       &.active {
