--- a/src/scss/pages/proposals/edit/preview-page.scss
+++ b/src/scss/pages/proposals/edit/preview-page.scss
@@ -1,9 +1,11 @@
+@import '../../../_partials/variables';
 @import '../../../_partials/colors';
 
 body #root .App .views .view.proposals-preview-view {
   background-color: $background-white;
   color: $text;
   z-index: 0;
+	margin-top: $navbar-hg;
 
   .proposals-preview-wrapper {
 
