--- a/src/scss/pages/proposals/edit/type-page.scss
+++ b/src/scss/pages/proposals/edit/type-page.scss
@@ -1,3 +1,4 @@
+@import '../../../_partials/variables';
 @import '../../../_partials/colors';
 
 body #root .App .views .view.proposal-type-edit {
@@ -5,6 +6,7 @@ body #root .App .views .view.proposal-type-edit {
   color: $gray-main-text;
   text-align: center;
   z-index: 0;
+	margin-top: $navbar-hg;
 
   .proposal-wrapper {
     margin-top: 55px;
