--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -29,12 +29,13 @@ body #root .App .view .page.other-questions-page  {
         
         text-align: center;
         font: inherit;
-        background: $white;
+        background: #f6f6f6;
         border: none;
         outline: none;
         margin: 4px;
         padding: 8px;
         border-radius: 8px;
+        box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.16);
         
         display: flex;
         flex-direction: column;
