--- a/src/js/components/ui/ProposalIcon/ProposalIcon.scss
+++ b/src/js/components/ui/ProposalIcon/ProposalIcon.scss
@@ -1,3 +1,5 @@
+@import '../../../../scss/_partials/colors';
+
 .rounded-icon {
     background: #6C6F82;
     border: none;
@@ -71,3 +73,19 @@
       }
     }
   }
+
+.rosa {
+  circle {
+    fill: $pink-hobbies;
+  }
+}
+.azul {
+  circle {
+    fill: $blue-projects;
+  }
+}
+.verde {
+  circle {
+    fill: $green-experiences;
+  }
+}
