--- a/src/js/components/Proposal/ProposalCard/ProposalCard.scss
+++ b/src/js/components/Proposal/ProposalCard/ProposalCard.scss
@@ -17,7 +17,7 @@
     box-shadow: 0 0 5px $gray-border;
     color: #6C6F82;
     font-size: 14px;
-    margin: 2.5%;
+    margin: 0 2.5%;
     padding: 0;
     width: 95%;
 
@@ -33,7 +33,7 @@
         -webkit-border-radius: 10px 10px 0 0;
         width: 100%;
       }
-      .top-data {
+      /*.top-data {
         bottom: 0;
         color: white;
         height: 100%;
@@ -48,12 +48,18 @@
           overflow: hidden;
           position: absolute;
         }
-      }
+      }*/
 
+    }
+    .topData {
+      padding: 0 5%;
+      h2 {
+        margin: 16px 0;
+      }
     }
     .type {
       position: absolute;
-      right: 16px;
+      right: 24px;
       top: 16px;
       z-index: 1;
     }
@@ -72,7 +78,7 @@
         }
         .age-city {
           color: $gray-secondary-text;
-          font-size: 14px;
+          font-size: 16px;
           font-weight: normal;
           white-space: nowrap;
           overflow: hidden;
@@ -82,6 +88,7 @@
     }
     .description {
       padding: 16px 5%;
+      font-size: 16px;
       .resume-text {
         font-weight: normal;
         margin-top: 16px;
