QS-1651: Proposals: Swipe overlay en tarjetas proposal & candidate

--- a/src/scss/_partials/_variables.scss
+++ b/src/scss/_partials/_variables.scss
@@ -4,3 +4,5 @@ $panel-width: 324px;
 $card-border-radius: 8px;
 $chip-border-radius: 16px;
 $chip-border-width: 1px;
+
+$proposal-border-radius: 10px;
