--- a/src/js/components/Proposal/CandidateCard/CandidateCard.scss
+++ b/src/js/components/Proposal/CandidateCard/CandidateCard.scss
@@ -1,4 +1,5 @@
 @import '../../../../scss/_partials/colors';
+@import '../../../../scss/_partials/variables';
 
 .candidate-card {
   cursor: pointer;
@@ -11,9 +12,9 @@
 
   .frame {
     background: #FFF;
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
+    border-radius: $proposal-border-radius;
+    -moz-border-radius: $proposal-border-radius;
+    -webkit-border-radius: $proposal-border-radius;
     box-shadow: 0 0 5px $gray-border;
     color: #6C6F82;
     font-size: 14px;
@@ -28,9 +29,9 @@
       width: 100%;
 
       .image {
-        border-radius: 10px 10px 0 0;
-        -moz-border-radius: 10px 10px 0 0;
-        -webkit-border-radius: 10px 10px 0 0;
+        border-radius: $proposal-border-radius $proposal-border-radius 0 0;
+        -moz-border-radius: $proposal-border-radius $proposal-border-radius 0 0;
+        -webkit-border-radius: $proposal-border-radius $proposal-border-radius 0 0;
         width: 100%;
         height: 240px;
         background-size: cover;
